RESOLVED FIXED54750
[chromium] Fix leak of texture IDs in compositor.
https://bugs.webkit.org/show_bug.cgi?id=54750
Summary [chromium] Fix leak of texture IDs in compositor.
Jonathan Backer
Reported 2011-02-18 08:46:00 PST
[chromium] Fix leak of texture IDs in compositor.
Attachments
Patch (1.56 KB, patch)
2011-02-18 08:50 PST, Jonathan Backer
no flags
Patch (1.79 KB, patch)
2011-02-18 11:07 PST, Jonathan Backer
no flags
Jonathan Backer
Comment 1 2011-02-18 08:50:01 PST
James Robinson
Comment 2 2011-02-18 10:52:55 PST
Patch looks good, but you have to remove the "No new tests (OOPS)" line from the change log and explain why there are no new tests.
Jonathan Backer
Comment 3 2011-02-18 11:07:10 PST
Eric Seidel (no email)
Comment 4 2011-02-18 11:25:02 PST
Comment on attachment 82983 [details] Patch OK.
WebKit Commit Bot
Comment 5 2011-02-18 21:43:33 PST
Comment on attachment 82983 [details] Patch Clearing flags on attachment: 82983 Committed r79093: <http://trac.webkit.org/changeset/79093>
WebKit Commit Bot
Comment 6 2011-02-18 21:43:37 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.