2011-02-18  Jonathan Backer  <backer@chromium.org>

Reviewed by Eric Seidel.

        [chromium] Fix leak of texture IDs in compositor.
        https://bugs.webkit.org/show_bug.cgi?id=54750

        No new tests. It is extremely unlikely that this leak would have
        any user visible impact because only a few bytes of space are wasted
        (we're leaking texture IDs, not actual textures) and the space of
        texture IDs is large (32 bits).

       * platform/graphics/chromium/TextureManager.cpp:
        (WebCore::TextureManager::requestTexture):

Canonical link: https://commits.webkit.org/69036@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79093 268f45cc-cd09-0410-ab3c-d52691b4dbfc